[gd_scene load_steps=5 format=3 uid="uid://dgvhvxdrd58qp"]

[ext_resource type="Script" path="res://Scripts/SidePanelNodes/SidePanel.gd" id="1_6hkgr"]
[ext_resource type="PackedScene" uid="uid://dspmmme0jspdx" path="res://Objects/SubComponents/CloseButton.tscn" id="2_2m11y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ehqk"]
bg_color = Color(0.129412, 0.14902, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28b4a"]
content_margin_left = 7.0
content_margin_right = 7.0
bg_color = Color(0.768627, 0.180392, 0.25098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SidePanel" type="PanelContainer"]
offset_right = 400.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0ehqk")
script = ExtResource("1_6hkgr")

[node name="OuterMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Scroller" type="ScrollContainer" parent="OuterMargin"]
layout_mode = 2

[node name="InnerMargin" type="MarginContainer" parent="OuterMargin/Scroller"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 3

[node name="VBox" type="VBoxContainer" parent="OuterMargin/Scroller/InnerMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBox" type="HBoxContainer" parent="OuterMargin/Scroller/InnerMargin/VBox"]
layout_mode = 2

[node name="TFHButton" type="Button" parent="OuterMargin/Scroller/InnerMargin/VBox/HBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxFlat_28b4a")
theme_override_styles/normal = SubResource("StyleBoxFlat_28b4a")
text = "Test from here"

[node name="CloseButton" parent="OuterMargin/Scroller/InnerMargin/VBox/HBox" instance=ExtResource("2_2m11y")]
layout_mode = 2

[node name="Fields" type="VBoxContainer" parent="OuterMargin/Scroller/InnerMargin/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[connection signal="pressed" from="OuterMargin/Scroller/InnerMargin/VBox/HBox/TFHButton" to="." method="_on_tfh_button_pressed"]
[connection signal="pressed" from="OuterMargin/Scroller/InnerMargin/VBox/HBox/CloseButton" to="." method="_on_close_button_pressed"]
